--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -17,6 +17,44 @@
                     </form>
                 </div>
         </section>
+
+        <section class="cincopasos" id="seccion-6">
+            <h6>PODÉS TENER TU AUTO EN 5 PASOS</h6>
+
+        <div class="ambos-container">
+            <div class="grid-container-uno">
+                <div class="grid-item"><i class="fa-solid fa-car"></i><span class="span-num">1</span>Elegí tu auto</div>
+                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
+                <div class="grid-item"><i class="fa-solid fa-clipboard-check"></i><span class="span-num">2</span>Completá la registración con tus datos</div>
+            </div>
+
+            <div class="grid-container-dos">
+                <div class="grid-item"><i class="fa-solid fa-building"></i><span class="span-num">3</span>Seleccioná un consecionario y hacé la reserva</div>
+                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
+                <div class="grid-item"><i class="fa-solid fa-hand-holding-dollar"></i><span class="span-num">4</span>Cancelá el saldo</div>
+                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
+                <div class="grid-item"><i class="fa-solid fa-people-carry-box"></i><span class="span-num">5</span>Retirá el auto</div>
+            </div>
+        </div>
+
+        <div class="uno-container">
+            <div class="container-estilo">
+            <div class="grid-item"><i class="fa-solid fa-car"></i><span class="span-num">1</span>Elegí tu auto</div>
+                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
+                <div class="grid-item"><i class="fa-solid fa-clipboard-check"></i><span class="span-num">2</span>Completá la registración con tus datos</div>
+                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
+                <div class="grid-item"><i class="fa-solid fa-building"></i><span class="span-num">3</span>Seleccioná un consecionario y hacé la reserva</div>
+                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
+                <div class="grid-item"><i class="fa-solid fa-hand-holding-dollar"></i><span class="span-num">4</span>Cancelá el saldo</div>
+                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
+                <div class="grid-item"><i class="fa-solid fa-people-carry-box"></i><span class="span-num">5</span>Retirá el auto</div>
+            </div>
+        </div>
+
+
+        </section>
+
+        <%- include ('./partials/secciones') %>
         
     </main>
 
