--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -12,7 +12,7 @@
                 <h2 class="titulo-carmakers">CARMAKERS</h2>
                 <div class="button-input">
                     <form action='/' method="GET" class="searchbar-form">
-                        <input type="text" placeholder="Modelos, características, servicios" class="search" required="">
+                        <input type="text" placeholder="Modelos, características" class="search" required="">
                         <button type="submit" class="boton-lupa"><i class="fas fa-search" id="icono-lupa"></i></button>
                     </form>
                 </div>
