--- a/src/views/partials/secciones.ejs
+++ b/src/views/partials/secciones.ejs
@@ -4,7 +4,7 @@
 
         <div class="texto-uno">
             <h2 class="nombre-auto-uno">Modelo <%= i + 1 %> </h2>
-            <h3 class="desc-auto-uno">Conocé <a href="#seccion-1">acá</a> ofertas exclusivas</h3>
+            <h3 class="desc-auto-uno">Conocé <a href="/products">acá</a> ofertas exclusivas</h3>
         </div>
     
 
