--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -6,14 +6,6 @@
     <%- include('./partials/menuResponsive')%>
     <div class="container-blur" id="filter"></div>
 
-<!-- 
-    Nombre del producto (n​ ame)​
-Descripción (d​ escription​)
-Imagen (i​ mage)​
-Categoría (c​ ategory)​
-Colores (o cualquier otro campo similar como: tamaños, talles, etc)
-Precio (p​ rice​)
--->
 
     <main>
 
@@ -26,30 +18,78 @@ Precio (p​ rice​)
                     <div class="correo-contra">
                         <label for="nombreProducto" class="label-correo">Nombre del Producto</label>
                         <input type="text" name="nombreProducto" id="nombreProducto" value="<%= productToEdit.nombreModelo %>" required>
+                        <% if(locals.errors && errors.nombreProducto) { %>
+                            <div class="text-danger">
+                                <%= errors.nombreProducto.msg %>
+                            </div>
+                            
+                        <% } %>
 
                         <label for="descripcionProducto" class="label-correo">Descripción</label>
                         <input type="textarea" name="descripcionProducto" id="descripcionProducto" value="<%= productToEdit.descripcion %>" required>
+                        <% if(locals.errors && errors.descripcionProducto) { %>
+                            <div class="text-danger">
+                                <%= errors.descripcionProducto.msg %>
+                            </div>
+                            
+                        <% } %>
 
                         <label for="imgProducto" class="label-correo">Imagen del producto</label>
                         <input type="file" name="imgProducto" id="imgProducto" required>
 
                         <label for="deliveryEstimado" class="label-correo">Delivery Estimado (semanas)</label>
                         <input type="number" name="deliveryEstimado" id="deliveryEstimado" value="<%= productToEdit.deliveryEstimado %>" required>
+                        <% if(locals.errors && errors.deliveryEstimado) { %>
+                            <div class="text-danger">
+                                <%= errors.deliveryEstimado.msg %>
+                            </div>
+                            
+                        <% } %>
                         
                         <label for="precioProducto" class="label-correo">Precio (USD)</label>
                         <input type="number" name="precioProducto" id="precioProducto" value="<%= productToEdit.precio %>" required>
+                        <% if(locals.errors && errors.precioProducto) { %>
+                            <div class="text-danger">
+                                <%= errors.precioProducto.msg %>
+                            </div>
+                            
+                        <% } %>
                         
                         <label for="autonomia" class="label-correo">Autonomía (km)</label>
                         <input type="number" name="autonomia" id="autonomia" value="<%= productToEdit.autonomia %>" required>
+                        <% if(locals.errors && errors.autonomia) { %>
+                            <div class="text-danger">
+                                <%= errors.autonomia.msg %>
+                            </div>
+                            
+                        <% } %>
 
                         <label for="velocidadMaxima" class="label-correo">Velocidad Máxima (km/h)</label>
                         <input type="number" name="velocidadMaxima" id="velocidadMaxima" value="<%= productToEdit.velocidadMaxima %>" required>
+                        <% if(locals.errors && errors.velocidadMaxima) { %>
+                            <div class="text-danger">
+                                <%= errors.velocidadMaxima.msg %>
+                            </div>
+                            
+                        <% } %>
 
                         <label for="tiempoDeCeroCien" class="label-correo">Tiempo de cero a 100 km/h (seg)</label>
                         <input type="number" name="tiempoDeCeroCien" id="tiempoDeCeroCien" value="<%= productToEdit.tiempoDeCeroCien %>" required>
+                        <% if(locals.errors && errors.tiempoDeCeroCien) { %>
+                            <div class="text-danger">
+                                <%= errors.tiempoDeCeroCien.msg %>
+                            </div>
+                            
+                        <% } %>
 
                         <label for="ingreso" class="label-correo">Ingreso</label>
                         <input type="date" name="ingreso" id="ingreso" value="<%= productToEdit.ingreso %>" required>
+                        <% if(locals.errors && errors.ingreso) { %>
+                            <div class="text-danger">
+                                <%= errors.ingreso.msg %>
+                            </div>
+                            
+                        <% } %>
                     </div>
                     
                     
