--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -8,14 +8,15 @@
     <main>
 
                 <div class="single-column">
-                <form action="/users/register" method="POST" class="form-login" enctype="multipart/form-data">
+                <form action="/users/register" method="POST" class="form-login" id='form-register' enctype="multipart/form-data">
 
                     <h2 class="titulo-login">Crear cuenta</h2>
 
                     <div class="correo-contra">
 
                         <label for="nombres" class="label-correo">Nombres</label>
-                        <input type="text" name="nombres" id="nombre" value="<%= locals.oldData ? oldData.nombres : null %>" required>
+                        <input type="text" name="nombres" id="nombre" class="name-register" value="<%= locals.oldData ? oldData.nombres : null %>" required>
+                        <p class="text-name"></p>
                         <% if(locals.errors && errors.nombres) { %>
                             <div class="text-danger">
                                 <%= errors.nombres.msg %>
@@ -24,7 +25,8 @@
                         <% } %>
 
                         <label for="apellidos" class="label-correo">Apellidos</label>
-                        <input type="text" name="apellidos" id="apellido" value="<%= locals.oldData ? oldData.apellidos : null %>" required>
+                        <input type="text" name="apellidos" id="apellido"  class='lastname-register' value="<%= locals.oldData ? oldData.apellidos : null %>" required>
+                        <p class="text-lastname"></p>
                         <% if(locals.errors && errors.apellidos) { %>
                             <div class="text-danger">
                                 <%= errors.apellidos.msg %>
@@ -33,7 +35,8 @@
                         <% } %>
 
                         <label for="email" class="label-correo">Correo electrónico</label>
-                        <input type="email" name="email" id="correo" value="<%= locals.oldData ? oldData.email : null %>" required>
+                        <input type="email" name="email" id="correo" value="<%= locals.oldData ? oldData.email : null %>" class='email-register' required>
+                        <p class="text-email"></p>
                         <% if(locals.errors && errors.email) { %>
                             <div class="text-danger">
                                 <%= errors.email.msg %>
@@ -42,7 +45,8 @@
                         <% } %>
 
                         <label for="password" class="label-contra">Contraseña</label required>
-                        <input type="password" name="password" id="contraseña">
+                        <input type="password" name="password" id="contraseña" class="password-register">
+                        <p class="text-password"></p>
                         <% if(locals.errors && errors.password) { %>
                             <div class="text-danger">
                                 <%= errors.password.msg %>
@@ -51,7 +55,8 @@
                         <% } %>
 
                         <label for="imgPerfil" class="label-correo">Sube una imágen de perfil</label>
-                        <input accept="image/png,image/jpeg, image/jpg" type="file" name="imgPerfil" id="imgPerfil" required>
+                        <input accept="image/png,image/jpeg, image/jpg" type="file" name="imgPerfil" id="imgPerfil" class='img-register' required>
+                        <p class="text-image"></p>
                         <% if(locals.errors && errors.imgPerfil) { %>
                             <div class="text-danger">
                                 <%= errors.imgPerfil.msg %>
@@ -83,6 +88,7 @@
 
         <%- include('./partials/footer-2')%>
         <script src="/js/main.js" type="module"></script>
+        <script src="/js/validationFrontRegister.js" type="module"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
     </html>
