--- a/src/views/crearproducto.ejs
+++ b/src/views/crearproducto.ejs
@@ -19,7 +19,8 @@
                     <div class="correo-contra">
 
                         <label for="nombreProducto" class="label-correo">Nombre del Producto</label>
-                        <input type="text" name="nombreProducto" id="nombreProducto" value="Modelo X" required>
+                        <input type="text" name="nombreProducto" id="nombreProducto" value="Modelo X" class='name-create'  required>
+                        <p class="text-name"></p>
                         <% if(locals.errors && errors.nombreProducto) { %>
                             <div class="text-danger">
                                 <%= errors.nombreProducto.msg %>
@@ -28,7 +29,8 @@
                         <% } %>
 
                         <label for="descripcionProducto" class="label-correo">Descripción</label>
-                        <input type="textarea" name="descripcionProducto" id="descripcionProducto" value= "Lorem ipsum dolor sit amet consectetur." required>
+                        <input type="textarea" name="descripcionProducto" id="descripcionProducto" value= "Lorem ipsum dolor sit amet consectetur." class='desc-create' required>
+                        <p class="text-desc"></p>
                         <% if(locals.errors && errors.descripcionProducto) { %>
                             <div class="text-danger">
                                 <%= errors.descripcionProducto.msg %>
@@ -37,7 +39,8 @@
                         <% } %>
 
                         <label for="imgProducto" class="label-correo">Imagen del producto</label>
-                        <input type="file" name="imgProducto" id="imgProducto" required>
+                        <input type="file" name="imgProducto" id="imgProducto" class="img-create" required>
+                        <p class="text-image"></p>
                         <% if(locals.errors && errors.imgProducto) { %>
                             <div class="text-danger">
                                 <%= errors.imgProducto.msg %>
@@ -46,7 +49,8 @@
                         <% } %>
 
                         <label for="deliveryEstimado" class="label-correo">Delivery Estimado (semanas)</label>
-                        <input type="number" name="deliveryEstimado" id="deliveryEstimado" value=10 required>
+                        <input type="number" name="deliveryEstimado" id="deliveryEstimado" value=10 class="delivery-create" required>
+                        <p class="text-delivery"></p>
                         <% if(locals.errors && errors.deliveryEstimado) { %>
                             <div class="text-danger">
                                 <%= errors.deliveryEstimado.msg %>
@@ -55,7 +59,8 @@
                         <% } %>
                         
                         <label for="precioProducto" class="label-correo">Precio (USD)</label>
-                        <input type="number" name="precioProducto" id="precioProducto" value=10 required>
+                        <input type="number" name="precioProducto" id="precioProducto" value=10 class="precio-create" required>
+                        <p class="text-precio"></p>
                         <% if(locals.errors && errors.precioProducto) { %>
                             <div class="text-danger">
                                 <%= errors.precioProducto.msg %>
@@ -64,7 +69,8 @@
                         <% } %>
                         
                         <label for="autonomia" class="label-correo">Autonomía (km)</label>
-                        <input type="number" name="autonomia" id="autonomia" value=10 required>
+                        <input type="number" name="autonomia" id="autonomia" value=10 class="autonomia-create" required>
+                        <p class="text-autonomia"></p>
                         <% if(locals.errors && errors.autonomia) { %>
                             <div class="text-danger">
                                 <%= errors.autonomia.msg %>
@@ -73,7 +79,8 @@
                         <% } %>
 
                         <label for="velocidadMaxima" class="label-correo">Velocidad Máxima (km/h)</label>
-                        <input type="number" name="velocidadMaxima" id="velocidadMaxima" value=10 required>
+                        <input type="number" name="velocidadMaxima" id="velocidadMaxima" value=10 class="velocidad-create" required>
+                        <p class="text-velocidad"></p>
                         <% if(locals.errors && errors.velocidadMaxima) { %>
                             <div class="text-danger">
                                 <%= errors.velocidadMaxima.msg %>
@@ -82,7 +89,8 @@
                         <% } %>
 
                         <label for="tiempoDeCeroCien" class="label-correo">Tiempo de cero a 100 km/h (seg)</label>
-                        <input type="number" name="tiempoDeCeroCien" id="tiempoDeCeroCien" value=10 required>
+                        <input type="number" name="tiempoDeCeroCien" id="tiempoDeCeroCien" value=10 class="tiempo-create" required>
+                        <p class="text-tiempo"></p>
                         <% if(locals.errors && errors.tiempoDeCeroCien) { %>
                             <div class="text-danger">
                                 <%= errors.tiempoDeCeroCien.msg %>
@@ -91,7 +99,8 @@
                         <% } %>
 
                         <label for="ingreso" class="label-correo">Ingreso</label>
-                        <input type="date" name="ingreso" id="ingreso" value="2022-01-01" required>
+                        <input type="date" name="ingreso" id="ingreso" value="2022-01-01" class="ingreso-create" required>
+                        <p class="text-ingreso"></p>
                         <% if(locals.errors && errors.ingreso) { %>
                             <div class="text-danger">
                                 <%= errors.ingreso.msg %>
@@ -119,6 +128,7 @@
 
         <%- include('./partials/footer-2')%>
         <script src="/js/main.js" type="module"></script>
+        <script src="/js/validationFrontCreate.js" type="module"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
     </html>
