--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -17,7 +17,8 @@
 
                     <div class="correo-contra">
                         <label for="nombreProducto" class="label-correo">Nombre del Producto</label>
-                        <input type="text" name="nombreProducto" id="nombreProducto" value="<%= productToEdit.nombreModelo %>" required>
+                        <input type="text" name="nombreProducto" id="nombreProducto" value="<%= productToEdit.nombreModelo %>" class="name-create" required>
+                        <p class="text-name"></p>
                         <% if(locals.errors && errors.nombreProducto) { %>
                             <div class="text-danger">
                                 <%= errors.nombreProducto.msg %>
@@ -26,7 +27,8 @@
                         <% } %>
 
                         <label for="descripcionProducto" class="label-correo">Descripción</label>
-                        <input type="textarea" name="descripcionProducto" id="descripcionProducto" value="<%= productToEdit.descripcion %>" required>
+                        <input type="textarea" name="descripcionProducto" id="descripcionProducto" class='desc-create' value="<%= productToEdit.descripcion %>" required>
+                        <p class="text-desc"></p>
                         <% if(locals.errors && errors.descripcionProducto) { %>
                             <div class="text-danger">
                                 <%= errors.descripcionProducto.msg %>
@@ -35,7 +37,8 @@
                         <% } %>
 
                         <label for="imgProducto" class="label-correo">Imagen del producto</label>
-                        <input type="file" name="imgProducto" id="imgProducto" required>
+                        <input type="file" name="imgProducto" id="imgProducto" class="img-create" required>
+                        <p class="text-image"></p>
                         <% if(locals.errors && errors.imgProducto) { %>
                             <div class="text-danger">
                                 <%= errors.imgProducto.msg %>
@@ -44,7 +47,8 @@
                         <% } %>
 
                         <label for="deliveryEstimado" class="label-correo">Delivery Estimado (semanas)</label>
-                        <input type="number" name="deliveryEstimado" id="deliveryEstimado" value="<%= productToEdit.deliveryEstimado %>" required>
+                        <input type="number" name="deliveryEstimado" class="delivery-create" id="deliveryEstimado" value="<%= productToEdit.deliveryEstimado %>" required>
+                        <p class="text-delivery"></p>
                         <% if(locals.errors && errors.deliveryEstimado) { %>
                             <div class="text-danger">
                                 <%= errors.deliveryEstimado.msg %>
@@ -53,7 +57,8 @@
                         <% } %>
                         
                         <label for="precioProducto" class="label-correo">Precio (USD)</label>
-                        <input type="number" name="precioProducto" id="precioProducto" value="<%= productToEdit.precio %>" required>
+                        <input type="number" name="precioProducto" id="precioProducto" class="precio-create" value="<%= productToEdit.precio %>" required>
+                        <p class="text-precio"></p>
                         <% if(locals.errors && errors.precioProducto) { %>
                             <div class="text-danger">
                                 <%= errors.precioProducto.msg %>
@@ -62,7 +67,8 @@
                         <% } %>
                         
                         <label for="autonomia" class="label-correo">Autonomía (km)</label>
-                        <input type="number" name="autonomia" id="autonomia" value="<%= productToEdit.autonomia %>" required>
+                        <input type="number" name="autonomia" id="autonomia"  class="autonomia-create" value="<%= productToEdit.autonomia %>" required>
+                        <p class="text-autonomia"></p>
                         <% if(locals.errors && errors.autonomia) { %>
                             <div class="text-danger">
                                 <%= errors.autonomia.msg %>
@@ -71,7 +77,8 @@
                         <% } %>
 
                         <label for="velocidadMaxima" class="label-correo">Velocidad Máxima (km/h)</label>
-                        <input type="number" name="velocidadMaxima" id="velocidadMaxima" value="<%= productToEdit.velocidadMaxima %>" required>
+                        <input type="number" name="velocidadMaxima" id="velocidadMaxima" class="velocidad-create" value="<%= productToEdit.velocidadMaxima %>" required>
+                        <p class="text-velocidad"></p>
                         <% if(locals.errors && errors.velocidadMaxima) { %>
                             <div class="text-danger">
                                 <%= errors.velocidadMaxima.msg %>
@@ -80,7 +87,8 @@
                         <% } %>
 
                         <label for="tiempoDeCeroCien" class="label-correo">Tiempo de cero a 100 km/h (seg)</label>
-                        <input type="number" name="tiempoDeCeroCien" id="tiempoDeCeroCien" value="<%= productToEdit.tiempoDeCeroCien %>" required>
+                        <input type="number" name="tiempoDeCeroCien" id="tiempoDeCeroCien"  class="tiempo-create" value="<%= productToEdit.tiempoDeCeroCien %>" required>
+                        <p class="text-tiempo"></p>
                         <% if(locals.errors && errors.tiempoDeCeroCien) { %>
                             <div class="text-danger">
                                 <%= errors.tiempoDeCeroCien.msg %>
@@ -89,7 +97,8 @@
                         <% } %>
 
                         <label for="ingreso" class="label-correo">Ingreso</label>
-                        <input type="date" name="ingreso" id="ingreso" value="<%= productToEdit.ingreso %>" required>
+                        <input type="date" name="ingreso" id="ingreso" class="ingreso-create" value="<%= productToEdit.ingreso %>" required>
+                        <p class="text-ingreso"></p>
                         <% if(locals.errors && errors.ingreso) { %>
                             <div class="text-danger">
                                 <%= errors.ingreso.msg %>
@@ -119,6 +128,7 @@
 
         <%- include('./partials/footer-2')%>
         <script src="/js/main.js" type="module"></script>
+        <script src="/js/validationFrontCreate.js" type="module"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
     </html>
