funciones de api

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,7 +11,7 @@
         <section class="main-section-index">
                 <h2 class="titulo-carmakers">CARMAKERS</h2>
                 <div class="button-input">
-                    <form action='/' method="GET" class="searchbar-form">
+                    <form action='/products' method="GET" class="searchbar-form">
                         <input type="text" placeholder="Modelos, características" class="search" required="">
                         <button type="submit" class="boton-lupa"><i class="fas fa-search" id="icono-lupa"></i></button>
                     </form>
