--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -357,7 +357,7 @@ img{
 }
 
 .search{
-    color: white;
+    color: rgb(77, 77, 77);
     width: 100%;
     background: #ffffff;
     padding: 15px;
@@ -371,6 +371,7 @@ img{
 .search:focus{
     outline: none;
     background-color: rgb(77, 77, 77);
+    color:white;
 }
 
 
@@ -1371,9 +1372,21 @@ main section article div h3{
     border: solid black 1px;
 }
 
-.productos-article{
+/* .productos-article{
     display: grid;
     grid-template-columns: 80%;   
+    justify-content: center;
+}
+ */
+#productsList{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#productsList li{
+    display: grid;
+    grid-template-columns: 80%;
     justify-content: center;
 }
 
@@ -1874,16 +1887,22 @@ main section article div h3{
 
 /* INVENTARIO */
 
-.productos-article{
+.seccion-inv{
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+#productsList{
     display: grid;
-    grid-template-columns: 40% 40%;
-    grid-gap: 30px;
+    grid-template-columns: 50% 50%;
+    grid-gap: 20px;
     justify-content: center;
 }
 
-.seccion-inv{
-    max-width: 1200px;
-    margin: 0 auto;
+
+#productsList li{
+    grid-template-columns: 100%;
+    grid-gap: 0;
 }
 
 @media (min-width: 1000px){
@@ -2002,4 +2021,5 @@ nav a:hover{
 
 .search:hover{
     background-color: rgb(77, 77, 77);
+    color:white;
 }
