array de carrito

--- a/src/views/partials/secciones.ejs
+++ b/src/views/partials/secciones.ejs
@@ -13,7 +13,7 @@
                 <button type="button" class="saber-mas">SABER MÁS</i></button>
             </a>
     
-            <a href="/products/carrito">
+            <a href="/carrito">
                 <button type="button" class="compra-ahora">COMPRAR AHORA</i></button>
             </a>
         </div>
