--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -61,7 +61,8 @@
             <article>
                 <div class="modelo-delivery">
                     <h2 class="titulo-modelo"><%= modelos.nombreModelo%> </h2>
-                    <h3>Delivery estimado <%= modelos.deliveryEstimado%></h3>
+                    <h2 id="idModelo" hidden><%= modelos.idModelo%></h2>
+                    <h3>Delivery estimado: <%= modelos.deliveryEstimado%> días</h3>
                 </div>
             
 
@@ -70,27 +71,27 @@
                         Autonomía
                     </h4>
                     <h5>
-                        <%= modelos.autonomia %>
+                        <%= modelos.autonomia %> Kilómetros
                     </h5>
 
                     <h4>
                         Velocidad Máxima
                     </h4>
                     <h5>
-                        <%= modelos.velocidadMaxima %>
+                        <%= modelos.velocidadMaxima %> kilómetros por hora
                     </h5>
 
                     <h4>
                         Tiempo De Cero A Cien
                     </h4>
                     <h5>
-                        <%= modelos.tiempoDeCeroCien %>
+                        <%= modelos.tiempoDeCeroCien %> segundos
                     </h5>
                 
 
                     <div class="precio-auto">
                         <p class="precio">Precio</p>
-                        <p class="numero"><%= modelos.precio%></p>
+                        <p class="numero">$<%= modelos.precio%> .000.000</p>
                     </div>
 
                 </div>
@@ -141,7 +142,7 @@
 
             <article class="add">
                 <a href="/carrito">
-                    <button type="button">AÑADIR AL CARRITO</i></button>
+                    <button type="button" id="carrito">AÑADIR AL CARRITO</i></button>
                 </a>
             </article>
 
@@ -167,5 +168,6 @@
 
     <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="/js/carrito.js" type="module"></script>
 </body>
 </html>
