--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -12,7 +12,7 @@
 
     <div class="button-input">
         <div class="searchbar-form">
-            <input type="text" placeholder="Modelos, características" class="search" id="searchbarID">
+            <input type="text" placeholder="Modelos, características" class="search" id="searchbarID" value="<%= keyword  %> ">
             <button type="button" class="boton-lupa"><i class="fas fa-search" id="icono-lupa"></i></button>
         </div>
     </div>
