--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -14,54 +14,11 @@
 
             <h2 class="mis-compras-dos">Mis compras</h2>
 
-            <div class="flexbox-seccion">
-
-            <div class="nombre-imagen">
-
-                <div class="flex-img">
-                    <img src="\imgs\producto.jpg" alt="Foto del producto a comprar">
-                </div>
-                
-                <div class="flex-nombre-desc">
-                    <h3>Nombre del producto</h3>
-                    <h4>Descripción y detalles de la compra.</h4>
-                </div>
-
+                <ul id="productList"></ul>
+            <div class="div-login-button">
+                <button class="register-button" type="submit" name="vaciar-carrito" id="vaciar-carrito">Vaciar Carrito</button>
+                <button class="register-button" type="submit" name="realizar-compra">Comprar</button>
             </div>
-
-                
-                <div class="flex-icono-precio">
-                    <i class="fa-solid fa-xmark"></i>
-                    <h5>Precio</h5>
-                </div>
-                
-            </div>
-
-
-
-            <div class="flexbox-seccion-dos">
-
-            <div class="nombre-imagen">
-
-                <div class="flex-img">
-                    <img src="\imgs\producto2.jpg" alt="Foto del producto a comprar">
-                </div>
-                
-                <div class="flex-nombre-desc">
-                    <h3>Nombre del producto</h3>
-                    <h4>Descripción y detalles de la compra.</h4>
-                </div>
-
-            </div>
-
-                
-                <div class="flex-icono-precio">
-                    <i class="fa-solid fa-xmark"></i>
-                    <h5>Precio</h5>
-                </div>
-                
-            </div>
-
         </section>
 
 
@@ -116,5 +73,6 @@
 
     <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="/js/carrito.js" type="module"></script>
 </body>
 </html>
