--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -168,6 +168,6 @@
 
     <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="/js/carrito.js" type="module"></script>
+    <script src="/js/comprarCarrito.js" type="module"></script>
 </body>
 </html>
