--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -15,5 +15,7 @@
     <link rel="shortcut icon" type="img/png" href="/imgs/favicon2.png">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b12fa36c29.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/awesome-notifications/3.1.0/style.min.css"></link>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/awesome-notifications/3.1.0/index.var.js"></script>
     <title>CarMakers</title>
 </head>
