arreglos crud usuarios

--- a/src/views/editarUsuario.ejs
+++ b/src/views/editarUsuario.ejs
@@ -32,12 +32,13 @@
                     
 
                     <div class="div-login-button">
+                        <form action="/users/<%= usuarioToEdit.idUsuario %>/eliminar?_method=DELETE" method="POST" class="form-login"></form>
                         <button class="register-button" type="submit" >Guardar</button>
                     </div>
 
                 </form>
 
-                <form action="/users/<%= usuarioToEdit.id %>/eliminar?_method=DELETE" method="POST" class="form-login">
+                <form action="/users/<%= usuarioToEdit.idUsuario %>/eliminar?_method=DELETE" method="POST" class="form-login">
                     <button type="submit" class="register-button">ELIMINAR</button>
                 </form>
 
